2007-10-15  Michael Stucki  <michael@typo3.org>

	* (feature) Add new external library "RemoveXSS" for easily filtering potential Cross Site Scripting (XSS) attacks. Can be used by any script. Usage: $filtered_string = t3lib_div::removeXSS($input_string); Thanks to Travis Puderbaugh <kallahar@quickwired.com> for providing this nice piece of code!

2007-10-13  Ingo Renner  <ingo@typo3.org>

	* Fixed bug 6517: Add icons and grouping to the page type selector

2007-10-09  Benjamin Mack  <mack@xnos.org>

	* (minor) indexed_search - Added info where additional doc. can be found

2007-10-09  Benjamin Mack  <mack@xnos.org>

        * (tweak) No selection for TCEForms groups with max. one option needed

2007-10-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Added flag for Galician language
	* Added more @var

2007-10-08  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #6420: access key generation wrong with HTML tags in menu titles (TMENU)
	* Pass on access key of menu items to IProcFunc

2007-10-08  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6032: Freeing SQL result sets (post patch)

2007-10-07  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5911: GIFBUILDER setting quality not honoured

2007-10-06  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #6462: Wrong default locale charset on Windows
	* Fixed bug #6032: Freeing SQL result sets
	* Fixed bug #6252: rteHTMLarea acronyms are not DBAL compatible
	* Fixed bug #5189: images with uppercase file extension aren't displayed in drag-n-drop listing

2007-10-01  Bernhard Kraft  <kraftb@kraftb.at>

	* Bugfix for: Hide empty dynTabs in tceforms (missing array key broke RTE after hidden Tabs)

2007-09-28  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #6367: Integrate possibility in Element Browser to select all files of a folder (thanks to fotobuch.de AG for sponsoring)

2007-09-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Another hanging recordset fixed